added DBpedia annotator, refactored some of the template code

--- a/chrome/content/papermachines/processors/templates/phrasenet.html
+++ b/chrome/content/papermachines/processors/templates/phrasenet.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+    <title>Phrase Net: COLLECTION_NAME</title>
 <script src="d3.v2.js"></script>
 <script src="d3.layout.cloud.js"></script>
 <style type="text/css">
