--- a/chrome/content/papermachines/processors/templates/geodict.html
+++ b/chrome/content/papermachines/processors/templates/geodict.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Geoparser: COLLECTION_NAME</title>
     <script type="text/javascript" src="d3.v2.js"></script>
     <script type="text/javascript" src="html5slider.js"></script>
     <script type="text/javascript" src="DATA_FILE"></script>
