--- a/chrome/content/papermachines/processors/templates/mallet.html
+++ b/chrome/content/papermachines/processors/templates/mallet.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Streamgraph</title>
+    <title>Topic Modeling: COLLECTION_NAME</title>
     <script type="text/javascript" src="d3.v2.js"></script>
     <script type="text/javascript" src="innersvg.js"></script>
     <script type="text/javascript" src="d3.layout.cloud.js"></script>
@@ -71,6 +71,7 @@
     var topicCorrelations = TOPIC_CORRELATIONS;
     var topicStdevs = TOPIC_STDEVS;
     var topicProportions = TOPIC_PROPORTIONS;
+    var categorical = CATEGORICAL;
     </script>
     <link type="text/css" rel="stylesheet" href="button.css"/>
   </head>
