--- a/chrome/content/papermachines/processors/templates/wordcloud.html
+++ b/chrome/content/papermachines/processors/templates/wordcloud.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Word Cloud: COLLECTION_NAME</title>
 <script src="d3.v2.js"></script>
 <script src="d3.layout.cloud.js"></script>
 </head>
