--- a/chrome/content/papermachines/processors/templates/dbpedia.html
+++ b/chrome/content/papermachines/processors/templates/dbpedia.html
@@ -2,10 +2,12 @@
 <html>
 <head>
 	<title>DBPedia: COLLECTION_NAME</title>
+    <script type="text/javascript" src="d3.v2.js"></script>
 	<script type="text/javascript">
 	var data = DATA;
 	</script>
 </head>
 <body>
+<script type="text/javascript" src="dbpedia.js"></script>
 </body>
 </html>
