--- a/chrome/content/papermachines/processors/templates/geoparse.html
+++ b/chrome/content/papermachines/processors/templates/geoparse.html
@@ -104,7 +104,7 @@ stroke: #0B5A26;
       <div id="searches"><label for="searchTime" value="Time:"><input type="range" id="searchTime"/></label><div id="timeDisplay"></div></div>
     </div>
     <script type="text/javascript"> var linksByYear = LINKS_BY_YEAR;</script>
-    <script type="text/javascript" src="geodict.js"></script>
+    <script type="text/javascript" src="geoparse.js"></script>
     <script type="text/javascript">
       window.onload = function () { generateSearch(); };
     </script>
