separate out detailed item data into docMetadata object

--- a/chrome/content/papermachines/processors/templates/mallet_lda.html
+++ b/chrome/content/papermachines/processors/templates/mallet_lda.html
@@ -66,6 +66,7 @@
     </style>
     <script type="text/javascript">
     var data = TOPICS_DOCS;
+    var docMetadata = DOC_METADATA;
     var labels = TOPIC_LABELS;
     var topicCoherence = TOPIC_COHERENCE;
     var topicCorrelations = TOPIC_CORRELATIONS;
