remove failed mallet outputs, add index of stems

--- a/chrome/content/papermachines/processors/templates/mallet_lda.html
+++ b/chrome/content/papermachines/processors/templates/mallet_lda.html
@@ -73,6 +73,7 @@
     var topicStdevs = TOPIC_STDEVS;
     var topicProportions = TOPIC_PROPORTIONS;
     var categorical = CATEGORICAL;
+    var index = INDEX;
     </script>
     <link type="text/css" rel="stylesheet" href="button.css"/>
   </head>
