source/target colors on map

--- a/chrome/content/papermachines/processors/templates/dbpedia.html
+++ b/chrome/content/papermachines/processors/templates/dbpedia.html
@@ -4,7 +4,8 @@
 	<title>DBPedia: COLLECTION_NAME</title>
     <script type="text/javascript" src="d3.v2.js"></script>
 	<script type="text/javascript">
-	var data = DATA;
+	var data = URIS_TO_DOCS;
+	var docMetadata = DOC_METADATA;
 	</script>
 </head>
 <body>
