hooked up the UI for saving streamgraphs

--- a/chrome/content/papermachines/processors/templates/mallet_lda.html
+++ b/chrome/content/papermachines/processors/templates/mallet_lda.html
@@ -6,7 +6,7 @@
     <script type="text/javascript" src="innersvg.js"></script>
     <script type="text/javascript" src="d3.layout.cloud.js"></script>
     <style type="text/css">
-      #chart {
+      svg {
         font: 10px 'Helvetica', sans-serif;
         background: white;
       }
