--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,7 +41,7 @@
         <p>A Zotero extension for analysis and visualization in the digital humanities.</p>
         <p class="view"><a href="http://github.com/chrisjr/papermachines">View the Project on GitHub <small>chrisjr/papermachines</small></a></p>
         <ul>
-          <li onclick="return install(event);"><a onclick="return install(event);" href="https://github.com/downloads/chrisjr/papermachines/papermachines-{{ site.version }}.xpi" hash="sha1:{{ site.sha }}">Install <strong>Extension</strong></a></li>
+          <li onclick="return install(event);"><a onclick="return install(event);" href="{{ site.extensionurl }}" hash="sha1:{{ site.sha }}">Install <strong>Extension</strong></a></li>
           <li><a href="examples.html">View <strong>Examples</strong></a></li>
           <li><a href="docs.html">Fork on <strong>GitHub</strong></a></li>
         </ul>
