add export, JSTOR DFR ui, update docs

--- a/chrome/content/papermachines/processors/templates/dbpedia.html
+++ b/chrome/content/papermachines/processors/templates/dbpedia.html
@@ -2,13 +2,13 @@
 <html>
 <head>
 	<title>DBPedia: COLLECTION_NAME</title>
-    <script type="text/javascript" src="d3.v2.js"></script>
+    <script type="text/javascript" src="aux/d3.v2.js"></script>
 	<script type="text/javascript">
 	var data = URIS_TO_DOCS;
 	var docMetadata = DOC_METADATA;
 	</script>
 </head>
 <body>
-<script type="text/javascript" src="dbpedia.js"></script>
+<script type="text/javascript" src="aux/dbpedia.js"></script>
 </body>
 </html>
