--- a/chrome/content/papermachines/processors/templates/extract.html
+++ b/chrome/content/papermachines/processors/templates/extract.html
@@ -4,6 +4,6 @@
 <title>Extracting: COLLECTION_NAME</title>
 </head>
 <body>
-<div>Finished. Extracted SUCCEEDED out of TOTAL new texts.</div>
+<div>Extracted SUCCEEDED out of TOTAL new texts. This window can now be closed.</div>
 </body>
 </html>
