--- a/chrome/content/papermachines/processors/templates/mallet_black.html
+++ b/chrome/content/papermachines/processors/templates/mallet_black.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <title>Streamgraph</title>
-    <script type="text/javascript" src="d3.v2.js"></script>
-    <script type="text/javascript" src="innersvg.js"></script>
-    <script type="text/javascript" src="d3.layout.cloud.js"></script>
+    <script type="text/javascript" src="aux/d3.v2.js"></script>
+    <script type="text/javascript" src="aux/innersvg.js"></script>
+    <script type="text/javascript" src="aux/d3.layout.cloud.js"></script>
     <style type="text/css">
       #chart {
         font: 10px 'Helvetica', sans-serif;
@@ -77,7 +77,7 @@
     var topicStdevs = TOPIC_STDEVS;
     var topicProportions = TOPIC_PROPORTIONS;
     </script>
-    <link type="text/css" rel="stylesheet" href="button.css"/>
+    <link type="text/css" rel="aux/stylesheet" href="button.css"/>
   </head>
   <body>
     <div id="popupLayer"></div>
@@ -106,6 +106,6 @@
     </div>
     <p>
     </div>
-    <script type="text/javascript" src="stream.js"></script>
+    <script type="text/javascript" src="aux/stream.js"></script>
   </body>
 </html>
