work toward windows compatibility
the "aux" folder was causing unpacking to fail

--- a/chrome/content/papermachines/processors/templates/mallet_lda.html
+++ b/chrome/content/papermachines/processors/templates/mallet_lda.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <title>Topic Modeling: COLLECTION_NAME</title>
-    <script type="text/javascript" src="aux/d3.v2.js"></script>
-    <script type="text/javascript" src="aux/innersvg.js"></script>
-    <script type="text/javascript" src="aux/d3.layout.cloud.js"></script>
+    <script type="text/javascript" src="support/d3.v2.js"></script>
+    <script type="text/javascript" src="support/innersvg.js"></script>
+    <script type="text/javascript" src="support/d3.layout.cloud.js"></script>
     <style type="text/css">
       svg {
         font: 10px 'Helvetica', sans-serif;
@@ -75,7 +75,7 @@
     var categorical = CATEGORICAL;
     var index = ###INDEX###;
     </script>
-    <link type="text/css" rel="aux/stylesheet" href="button.css"/>
+    <link type="text/css" rel="support/stylesheet" href="button.css"/>
   </head>
   <body>
     <div id="popupLayer"></div>
@@ -104,6 +104,6 @@
     </div>
     <p>
     </div>
-    <script type="text/javascript" src="aux/stream.js"></script>
+    <script type="text/javascript" src="support/stream.js"></script>
   </body>
 </html>
