--- a/chrome/content/papermachines/processors/templates/geoparse.html
+++ b/chrome/content/papermachines/processors/templates/geoparse.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <title>Geoparser: COLLECTION_NAME</title>
-    <script type="text/javascript" src="aux/d3.v2.js"></script>
-    <script type="text/javascript" src="aux/html5slider.js"></script>
-    <script type="text/javascript" src="aux/colorbrewer.js"></script>
-    <link type="text/css" rel="aux/stylesheet" href="button.css"/>
+    <script type="text/javascript" src="support/d3.v2.js"></script>
+    <script type="text/javascript" src="support/html5slider.js"></script>
+    <script type="text/javascript" src="support/colorbrewer.js"></script>
+    <link type="text/css" rel="support/stylesheet" href="button.css"/>
     <style type="text/css">
 body {
   overflow: hidden;
@@ -113,7 +113,7 @@ fill-opacity: 0.7;
     var startDate = STARTDATE;
     var endDate = ENDDATE;
     </script>
-    <script type="text/javascript" src="aux/geoparse.js"></script>
+    <script type="text/javascript" src="support/geoparse.js"></script>
     <script type="text/javascript">
       window.onload = function () { generateSearch(); };
     </script>
