--- a/chrome/content/papermachines/processors/templates/wordcloud_multiple.html
+++ b/chrome/content/papermachines/processors/templates/wordcloud_multiple.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <title>Multiple Word Clouds: COLLECTION_NAME</title>
-<script src="aux/d3.v2.js"></script>
-<script src="aux/d3.layout.cloud.js"></script>
+<script src="support/d3.v2.js"></script>
+<script src="support/d3.layout.cloud.js"></script>
 </head>
 <body>
 <script>
