fix to button.css

--- a/chrome/content/papermachines/processors/templates/geoparse.html
+++ b/chrome/content/papermachines/processors/templates/geoparse.html
@@ -5,7 +5,7 @@
     <script type="text/javascript" src="support/d3.v2.js"></script>
     <script type="text/javascript" src="support/html5slider.js"></script>
     <script type="text/javascript" src="support/colorbrewer.js"></script>
-    <link type="text/css" rel="support/stylesheet" href="button.css"/>
+    <link type="text/css" rel="support/stylesheet" href="support/button.css"/>
     <style type="text/css">
 body {
   overflow: hidden;
