--- a/chrome/content/papermachines/processors/templates/mallet_lda.html
+++ b/chrome/content/papermachines/processors/templates/mallet_lda.html
@@ -75,7 +75,7 @@
     var categorical = CATEGORICAL;
     var index = ###INDEX###;
     </script>
-    <link type="text/css" rel="support/stylesheet" href="button.css"/>
+    <link type="text/css" rel="support/stylesheet" href="support/button.css"/>
   </head>
   <body>
     <div id="popupLayer"></div>
