utf-8, allow extracting the whole library

--- a/chrome/content/papermachines/processors/templates/dbpedia.html
+++ b/chrome/content/papermachines/processors/templates/dbpedia.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="UTF-8" />
 	<title>DBPedia: COLLECTION_NAME</title>
     <script type="text/javascript" src="support/d3.v2.js"></script>
 	<script type="text/javascript">
