--- a/chrome/content/papermachines/processors/templates/mallet_lda_MI.html
+++ b/chrome/content/papermachines/processors/templates/mallet_lda_MI.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Mutual Information: COLLECTION_NAME</title>
+	<meta charset="UTF-8" />
+	<title>Mutual Information: COLLECTION_NAME</title>
     <script type="text/javascript" src="support/d3.v2.js"></script>
 	<script type="text/javascript" src="support/html5slider.js"></script>
 	<script type="text/javascript">
