--- a/chrome/content/papermachines/processors/templates/phrasenet.html
+++ b/chrome/content/papermachines/processors/templates/phrasenet.html
@@ -1,8 +1,9 @@
 <html>
 <head>
-    <title>Phrase Net: COLLECTION_NAME</title>
-<script src="support/d3.v2.js"></script>
-<script src="support/d3.layout.cloud.js"></script>
+  <meta charset="UTF-8" />
+  <title>Phrase Net: COLLECTION_NAME</title>
+  <script src="support/d3.v2.js"></script>
+  <script src="support/d3.layout.cloud.js"></script>
 <style type="text/css">
 body {
   font: 12pt sans-serif;
