--- a/chrome/content/papermachines/processors/templates/wordcloud_multiple.html
+++ b/chrome/content/papermachines/processors/templates/wordcloud_multiple.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Multiple Word Clouds: COLLECTION_NAME</title>
-<script src="support/d3.v2.js"></script>
-<script src="support/d3.layout.cloud.js"></script>
+  <meta charset="UTF-8" />
+  <title>Multiple Word Clouds: COLLECTION_NAME</title>
+  <script src="support/d3.v2.js"></script>
+  <script src="support/d3.layout.cloud.js"></script>
 </head>
 <body>
 <script>
