--- a/chrome/content/papermachines/processors/templates/extract.html
+++ b/chrome/content/papermachines/processors/templates/extract.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Extracting: COLLECTION_NAME</title>
+	<meta charset="UTF-8" />
+	<title>Extracting: COLLECTION_NAME</title>
 </head>
 <body>
 <div>Extracted SUCCEEDED out of TOTAL new texts. This window can now be closed.</div>
