--- a/chrome/content/papermachines/processors/templates/mallet_black.html
+++ b/chrome/content/papermachines/processors/templates/mallet_black.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+  <meta charset="UTF-8" />
     <title>Streamgraph</title>
     <script type="text/javascript" src="support/d3.v2.js"></script>
     <script type="text/javascript" src="support/innersvg.js"></script>
