--- a/chrome/content/papermachines/processors/templates/mallet_classify-file.html
+++ b/chrome/content/papermachines/processors/templates/mallet_classify-file.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Classifier: COLLECTION_NAME</title>
+	<meta charset="UTF-8" />
+	<title>Classifier: COLLECTION_NAME</title>
 </head>
 <body>
 <pre>CLASSIFIED</pre>
