--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,12 +7,13 @@
     
     <script type="application/javascript">
     <!--
+    var pmhash = "sha1:e9851d0c281066cb3d7f1d9c1639cebb14ac1211";
     function install (aEvent)
     {
       var params = {
         "Paper Machines": { URL: aEvent.target.href,
 //                 IconURL: aEvent.target.getAttribute("iconURL"),
-                 Hash: aEvent.target.getAttribute("hash"),
+                 Hash: pmhash, // aEvent.target.getAttribute("hash"),
                  toString: function () { return this.URL; }
         }
       };
@@ -41,7 +42,7 @@
         <p>A Zotero extension for analysis and visualization in the digital humanities.</p>
         <p class="view"><a href="http://github.com/chrisjr/papermachines">View the Project on GitHub <small>chrisjr/papermachines</small></a></p>
         <ul>
-          <li onclick="return install(event);"><a onclick="return install(event);" href="https://github.com/downloads/chrisjr/papermachines/papermachines-0.1.8.xpi" hash="sha1:b8c5e02617a647dc6017804fe35eee07e3aa5a9a">Install <strong>Extension</strong></a></li>
+          <li onclick="return install(event);"><a onclick="return install(event);" href="https://github.com/downloads/chrisjr/papermachines/papermachines-0.1.9.xpi">Install <strong>Extension</strong></a></li>
           <li><a href="examples.html">View <strong>Examples</strong></a></li>
           <li><a href="docs.html">Fork on <strong>GitHub</strong></a></li>
         </ul>
