--- a/chrome/content/papermachines/processors/templates/extract.html
+++ b/chrome/content/papermachines/processors/templates/extract.html
@@ -6,5 +6,14 @@
 </head>
 <body>
 <div>Extracted SUCCEEDED out of TOTAL new texts. This window can now be closed.</div>
+<script>
+    var element = document.createElement("PaperMachinesDataElement");
+    element.setAttribute("refresh", true);
+    document.documentElement.appendChild(element);
+
+    var evt = document.createEvent("HTMLEvents");
+    evt.initEvent("papermachines-request", true, false);
+    element.dispatchEvent(evt);
+</script>
 </body>
 </html>
