add experimental feature preference

--- a/chrome/content/papermachines/processors/templates/mallet_dmr.html
+++ b/chrome/content/papermachines/processors/templates/mallet_dmr.html
@@ -19,7 +19,7 @@
 
       .x.axis line, .y.axis line {
         stroke: #fff;
-        stroke-width:2;
+        stroke-width:1;
       }
 
       .x.axis path, .y.axis path {
@@ -27,6 +27,7 @@
       }
       .x.axis .minor {
         stroke-width: 1;
+        stroke-opacity: 0.3;
       }
 
       .axis text {
