heat map and CSV export function for geoparsing
relabel geoparser menu to "Mapping"

--- a/chrome/content/papermachines/processors/templates/mallet_black.html
+++ b/chrome/content/papermachines/processors/templates/mallet_black.html
@@ -78,7 +78,7 @@
     var topicStdevs = TOPIC_STDEVS;
     var topicProportions = TOPIC_PROPORTIONS;
     </script>
-    <link type="text/css" rel="support/stylesheet" href="support/button.css"/>
+    <link type="text/css" rel="text/stylesheet" href="support/button.css"/>
   </head>
   <body>
     <div id="popupLayer"></div>
