fix broken link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,7 +44,7 @@
         <ul>
           <li onclick="return install(event);"><a onclick="return install(event);" href="https://github.com/downloads/chrisjr/papermachines/papermachines-0.2.16.xpi">Install <strong>Extension</strong></a></li>
           <li><a href="examples.html">View <strong>Examples</strong></a></li>
-          <li><a href="docs.html">Fork on <strong>GitHub</strong></a></li>
+          <li><a href="http://github.com/chrisjr/papermachines">Fork on <strong>GitHub</strong></a></li>
         </ul>
       </header>
       <section>
