heatmap minor fix

--- a/chrome/content/papermachines/processors/templates/geoparser_heatmap.html
+++ b/chrome/content/papermachines/processors/templates/geoparser_heatmap.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
-<title>heatmap.js GMaps Heatmap Layer</title>
+<title>Heatmap: COLLECTION_NAME</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<style>
 			body, html {
