--- a/chrome/content/papermachines/processors/templates/geoparser_flightpaths_gmaps.html
+++ b/chrome/content/papermachines/processors/templates/geoparser_flightpaths_gmaps.html
@@ -5,6 +5,50 @@
     <title>Geoparser: COLLECTION_NAME</title>
     <script type="text/javascript" src="support/html5slider.js"></script>
     <link type="text/css" rel="text/stylesheet" href="support/button.css"/>
+    <style type="text/css">
+      body, html {
+              margin:0;
+              padding:0;
+              font-family:Arial;
+            }
+      h1 {
+        margin-bottom:10px;
+      }
+      #main {
+        position:relative;
+        width:1020px;
+        padding:20px;
+        margin:auto;
+      }
+      #heatmapArea {
+        position:relative;
+        float:left;
+        width:960px;
+        height:600px;
+        border:1px dashed black;
+      }
+      #configArea {
+        position:relative;
+        float:left;
+        width:200px;
+        padding:15px;
+        padding-top:0;
+        padding-right:0;
+      }
+      .btn {
+        margin-top:25px;
+        padding:10px 20px 10px 20px;
+        -moz-border-radius:15px;
+        -o-border-radius:15px;
+        -webkit-border-radius:15px;
+        border-radius:15px;
+        border:2px solid black;
+        cursor:pointer;
+        color:white;
+        background-color:black;
+      }
+    </style>
+
     <link type="text/css" rel="text/stylesheet" href="support/flightpaths.css"/>
     <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
   </head>
@@ -24,12 +68,7 @@
     </div>
     <script type="text/javascript">
     var linksByYear = LINKS_BY_YEAR;
-    var placeIDsToCoords = PLACEIDSTOCOORDS;
-    var placeIDsToNames = PLACEIDSTONAMES;
-    var placesMentioned = PLACESMENTIONED;
-    var textsFromPlace = TEXTSFROMPLACE;
-    var countries = COUNTRIES;
-    var max_country_weight = MAX_COUNTRY_WEIGHT;
+    var entityURIs = ENTITYURIS;
     var startDate = STARTDATE;
     var endDate = ENDDATE;
     </script>
