--- a/chrome/content/papermachines/processors/templates/geoparser_heatmap.html
+++ b/chrome/content/papermachines/processors/templates/geoparser_heatmap.html
@@ -4,6 +4,50 @@
 <title>Heatmap: COLLECTION_NAME</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link type="text/css" rel="text/stylesheet" href="support/heatmap.css"/>
+
+<style type="text/css">
+      body, html {
+              margin:0;
+              padding:0;
+              font-family:Arial;
+            }
+      h1 {
+        margin-bottom:10px;
+      }
+      #main {
+        position:relative;
+        width:1020px;
+        padding:20px;
+        margin:auto;
+      }
+      #heatmapArea {
+        position:relative;
+        float:left;
+        width:960px;
+        height:600px;
+        border:1px dashed black;
+      }
+      #configArea {
+        position:relative;
+        float:left;
+        width:200px;
+        padding:15px;
+        padding-top:0;
+        padding-right:0;
+      }
+      .btn {
+        margin-top:25px;
+        padding:10px 20px 10px 20px;
+        -moz-border-radius:15px;
+        -o-border-radius:15px;
+        -webkit-border-radius:15px;
+        border-radius:15px;
+        border:2px solid black;
+        cursor:pointer;
+        color:white;
+        background-color:black;
+      }
+    </style>
 <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
 
 </head>
