--- a/chrome/content/papermachines/processors/templates/mallet_lda.html
+++ b/chrome/content/papermachines/processors/templates/mallet_lda.html
@@ -18,6 +18,7 @@
     var topicProportions = TOPIC_PROPORTIONS;
     var categorical = CATEGORICAL;
     var index = ###INDEX###;
+    var tags = TAGS;
     </script>
     <link type="text/css" rel="stylesheet" href="support/button.css"/>
   </head>
