Update to d3.js version 3

--- a/chrome/content/papermachines/processors/templates/geoparser_flightpaths.html
+++ b/chrome/content/papermachines/processors/templates/geoparser_flightpaths.html
@@ -3,7 +3,7 @@
   <head>
   <meta charset="UTF-8" />
     <title>Geoparser: COLLECTION_NAME</title>
-    <script type="text/javascript" src="support/d3.v2.js"></script>
+    <script type="text/javascript" src="support/d3.js"></script>
     <script type="text/javascript" src="support/html5slider.js"></script>
     <script type="text/javascript" src="support/colorbrewer.js"></script>
     <link type="text/css" rel="text/stylesheet" href="support/button.css"/>
