--- a/chrome/content/papermachines/processors/templates/mallet_black.html
+++ b/chrome/content/papermachines/processors/templates/mallet_black.html
@@ -3,7 +3,7 @@
   <head>
   <meta charset="UTF-8" />
     <title>Streamgraph</title>
-    <script type="text/javascript" src="support/d3.v2.js"></script>
+    <script type="text/javascript" src="support/d3.js"></script>
     <script type="text/javascript" src="support/innersvg.js"></script>
     <script type="text/javascript" src="support/d3.layout.cloud.js"></script>
     <style type="text/css">
