--- a/chrome/content/papermachines/processors/templates/mallet_dmr.html
+++ b/chrome/content/papermachines/processors/templates/mallet_dmr.html
@@ -3,7 +3,7 @@
   <head>
   <meta charset="UTF-8" />
     <title>Topic Modeling: COLLECTION_NAME</title>
-    <script type="text/javascript" src="support/d3.v2.js"></script>
+    <script type="text/javascript" src="support/d3.js"></script>
     <script type="text/javascript" src="support/innersvg.js"></script>
     <script type="text/javascript" src="support/d3.layout.cloud.js"></script>
     <link type="text/css" rel="stylesheet" href="support/stream.css"/>
