--- a/chrome/content/papermachines/processors/templates/mallet_lda_MI.html
+++ b/chrome/content/papermachines/processors/templates/mallet_lda_MI.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<title>Mutual Information: COLLECTION_NAME</title>
-    <script type="text/javascript" src="support/d3.v2.js"></script>
+    <script type="text/javascript" src="support/d3.js"></script>
 	<script type="text/javascript" src="support/html5slider.js"></script>
 	<script type="text/javascript">
 	var nodes = NODES;
