--- a/chrome/content/papermachines/processors/templates/geoparser_flightpaths_gmaps.html
+++ b/chrome/content/papermachines/processors/templates/geoparser_flightpaths_gmaps.html
@@ -50,6 +50,7 @@
     </style>
 
     <link type="text/css" rel="text/stylesheet" href="support/flightpaths.css"/>
+    <script type="text/javascript" src="support/d3.js"></script>
     <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
   </head>
   <body>
