--- a/chrome/content/papermachines/processors/templates/wordcloud.html
+++ b/chrome/content/papermachines/processors/templates/wordcloud.html
@@ -3,7 +3,7 @@
   <head>
   <meta charset="UTF-8" />
     <title>Word Cloud: COLLECTION_NAME</title>
-  <script src="support/d3.v2.js"></script>
+  <script src="support/d3.js"></script>
   <script src="support/d3.layout.cloud.js"></script>
 </head>
 <body>
