allow ngrams, translate, updated flightpaths

--- a/chrome/content/papermachines/processors/templates/extract.html
+++ b/chrome/content/papermachines/processors/templates/extract.html
@@ -5,7 +5,12 @@
 	<title>Extracting: COLLECTION_NAME</title>
 </head>
 <body>
-<div>Extracted SUCCEEDED out of TOTAL new texts. This window can now be closed.</div>
+<div>
+	<p>Extracted SUCCEEDED out of TOTAL new texts.</p>
+	<p>If this is the first extraction completed on your machine, you may need to restart Firefox/Zotero Standalone (and/or click on a different collection from the one you extracted, then on the original one) for the visualization tools to become accessible.</p>
+	<br/>
+	<p>This window can now be closed.</p>
+</div>
 <script>
     var element = document.createElement("PaperMachinesDataElement");
     element.setAttribute("refresh", true);
